<resources>
    <string name="app_name">MyTweet</string>
    <string name="title">Welcome to MyTweet</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="contacts">Search Contacts</string>
    <string name="tweet">Tweet</string>
    <string name="my_tweet_feed">MyTweet Feed</string>
    <string name="my_tweet_profile">MyTweet Private Profile</string>
    <string name="tweetHint">What\'s on your mind?</string>
    <string name="newTweet">New Tweet</string>
    <string name="settings">Settings</string>
    <string name="myTweets">MyTweets</string>
    <string name="logout">Logout</string>
    <string name="deleteAllTweets">Delete all Tweets</string>
    <string name="deleteTweets">Delete Tweets</string>
    <string name="email_summary">You may set your email here</string>
    <string name="password_summary">You may set your password here</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="password">Password</string>

</resources>
