<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".activity.UserNewTweetFragment">

    <item android:id="@+id/menuItemNewTweet"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/newTweet"
          app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_mytweets"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/myTweets"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/logout"/>

</menu>