<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logIn"
        android:id="@+id/loginTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/loginTitle"
        android:layout_below="@+id/loginTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:id="@+id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="47dp"
        android:layout_below="@+id/password" />
</RelativeLayout>